--- a/src/main/webapp/resources/css/styles.css
+++ b/src/main/webapp/resources/css/styles.css
@@ -72,36 +72,36 @@
 #header .selected{
   text-shadow:
   0 0 15px rgba(255,255,255,0.1),
-    0 1px 15px rgba(255,255,255,0.9),
-    0 2px 15px rgba(255,255,255,0.9),
-    0 3px 15px rgba(255,255,255,0.9),
-    0 4px 15px rgba(255,255,255,0.9),
-    0 5px 15px rgba(255,255,255,0.9),
-    0 6px 15px rgba(255,255,255,0.9),
-    0 -2px 15px rgba(255,255,255,0.9),
-    0 -4px 15px rgba(255,255,255,0.9);
+  0 1px 15px rgba(255,255,255,0.9),
+  0 2px 15px rgba(255,255,255,0.9),
+  0 3px 15px rgba(255,255,255,0.9),
+  0 4px 15px rgba(255,255,255,0.9),
+  0 5px 15px rgba(255,255,255,0.9),
+  0 6px 15px rgba(255,255,255,0.9),
+  0 -2px 15px rgba(255,255,255,0.9),
+  0 -4px 15px rgba(255,255,255,0.9);
 
   -moz-text-shadow:
-    0 0 15px rgba(255,255,255,0.1),
-    0 1px 15px rgba(255,255,255,0.9),
-    0 2px 15px rgba(255,255,255,0.9),
-    0 3px 15px rgba(255,255,255,0.9),
-    0 4px 15px rgba(255,255,255,0.9),
-    0 5px 15px rgba(255,255,255,0.9),
-    0 6px 15px rgba(255,255,255,0.9),
-    0 -2px 15px rgba(255,255,255,0.9),
-    0 -4px 15px rgba(255,255,255,0.9);
+  0 0 15px rgba(255,255,255,0.1),
+  0 1px 15px rgba(255,255,255,0.9),
+  0 2px 15px rgba(255,255,255,0.9),
+  0 3px 15px rgba(255,255,255,0.9),
+  0 4px 15px rgba(255,255,255,0.9),
+  0 5px 15px rgba(255,255,255,0.9),
+  0 6px 15px rgba(255,255,255,0.9),
+  0 -2px 15px rgba(255,255,255,0.9),
+  0 -4px 15px rgba(255,255,255,0.9);
 
-    -webkit-text-shadow:
-    0 0 15px rgba(255,255,255,0.1),
-    0 1px 15px rgba(255,255,255,0.9),
-    0 2px 15px rgba(255,255,255,0.9),
-    0 3px 15px rgba(255,255,255,0.9),
-    0 4px 15px rgba(255,255,255,0.9),
-    0 5px 15px rgba(255,255,255,0.9),
-    0 6px 15px rgba(255,255,255,0.9),
-    0 -2px 15px rgba(255,255,255,0.9),
-    0 -4px 15px rgba(255,255,255,0.9);
+  -webkit-text-shadow:
+  0 0 15px rgba(255,255,255,0.1),
+  0 1px 15px rgba(255,255,255,0.9),
+  0 2px 15px rgba(255,255,255,0.9),
+  0 3px 15px rgba(255,255,255,0.9),
+  0 4px 15px rgba(255,255,255,0.9),
+  0 5px 15px rgba(255,255,255,0.9),
+  0 6px 15px rgba(255,255,255,0.9),
+  0 -2px 15px rgba(255,255,255,0.9),
+  0 -4px 15px rgba(255,255,255,0.9);
 }
 
 /* }}} */
@@ -161,6 +161,10 @@
   margin-top:-10px !important;
 }
 
+.rights_table thead {
+  font-size:12px;
+}
+
 .ui-accordion-content {
   text-align:justify;
 }
@@ -181,6 +185,43 @@
   width:23px;
 }
 
+.lecturerList {
+  border:none !important;
+  text-align: center !important;
+}
+
+.lecturerList ul li {
+  display:inline;
+  color:#004188;
+  font-size:15px;
+  font-weight:bold;
+}
+
+.lecturerList ul {
+  margin-top:0px;
+  margin-right:35px;
+}
+
+.lecturerList .ui-datalist-content {
+  border:none !important;
+}
+
+.removeLecturerButton {
+  margin-right:15px !important;
+  border: none !important;
+  height: 10px !important;
+  width: 10px !important;
+  left: 10px !important;
+}
+
+.removeLecturerButton span {
+  left: -3px;
+}
+
+.rights_table .ui-messages-info, .rights_table .ui-messages-error {
+  background-color:white;
+}
+
 
 /*
  * -------------------------------------------------------------
@@ -198,7 +239,7 @@
 
 #usertask .filter_textfield {
   padding:0px 5px 0px 5px !important;
-    height:21px;
+  height:21px;
   width:365px;
   margin-right:5px;
 }
@@ -269,12 +310,12 @@ table th {
 
 .darkshadow{
   text-shadow: 0px 1px 2px #969696;
-    -moz-text-shadow: 0px 1px 2px #969696;
-    -webkit-text-shadow: 0px 1px 2px #969696;
+  -moz-text-shadow: 0px 1px 2px #969696;
+  -webkit-text-shadow: 0px 1px 2px #969696;
 }
 
 .ui-dialog {
-    width: auto !important;
+  width: auto !important;
   max-width:100% !important;
   max-height:100% !important;
   overflow-y:hidden !important;
@@ -282,8 +323,8 @@ table th {
 
 .lightshadow{
   text-shadow: 0px 2px 4px #FFF;
-    -moz-text-shadow: 0px 2px 4px #FFF;
-    -webkit-text-shadow: 0px 2px 4px #FFF;
+  -moz-text-shadow: 0px 2px 4px #FFF;
+  -webkit-text-shadow: 0px 2px 4px #FFF;
 }
 
 
@@ -309,6 +350,16 @@ button:last-of-type .reflink_button {
 
 .secondcolor{
   color: #004188;
+}
+
+.adminFont {
+  color: darkred;
+  font-weight:bold;
+}
+
+.lecturerFont {
+  color: #004188;
+  font-weight:bold;
 }
 
 .ui-paginator {
@@ -340,12 +391,12 @@ button:last-of-type .reflink_button {
 }
 
 /*
-#form\:admin_grid .ui-messages-info {
-  width: 786px;
+ #form\:admin_grid .ui-messages-info {
+ width: 786px;
 }
 
 #form\:admin_grid .ui-messages-error {
-  width: 786px;
+width: 786px;
 }
 */
 
@@ -534,6 +585,8 @@ span.intoduction_text {
   display:inline;
 }
 
+
+
 .relevant_tables_list ul {
   padding: 0px;
   margin: 3px 0px 0px -3px;
@@ -600,7 +653,7 @@ span.intoduction_text {
 }
 
 #usertask\:task_grid button {
-   background-color:#f2f2f2 !important;
+  background-color:#f2f2f2 !important;
 }
 
 #usertask\:task_grid .ui-paginator {
@@ -697,24 +750,24 @@ html {
 }
 
 .preformatted {
-    white-space: pre;
+  white-space: pre;
   font-size: 11px;
-    font-family:Consolas,Monaco,Lucida Console,Liberation Mono,DejaVu Sans Mono,Bitstream Vera Sans Mono,Courier New, monospace;
+  font-family:Consolas,Monaco,Lucida Console,Liberation Mono,DejaVu Sans Mono,Bitstream Vera Sans Mono,Courier New, monospace;
 }
 
 
 
 .roundcorners2{
-    border-radius: 10px;
-    box-shadow:
-    0px 8px 19px rgba(0, 0, 0, 0.3),
-    0px 13px 19px rgba(0, 0, 0, 0.2);
-    -moz-box-shadow:
-    0px 8px 19px rgba(0, 0, 0, 0.3),
-    0px 13px 19px rgba(0, 0, 0, 0.2);
-    -webkit-box-shadow:
+  border-radius: 10px;
+  box-shadow:
   0px 8px 19px rgba(0, 0, 0, 0.3),
-    0px 13px 19px rgba(0, 0, 0, 0.2);
+  0px 13px 19px rgba(0, 0, 0, 0.2);
+  -moz-box-shadow:
+  0px 8px 19px rgba(0, 0, 0, 0.3),
+  0px 13px 19px rgba(0, 0, 0, 0.2);
+  -webkit-box-shadow:
+  0px 8px 19px rgba(0, 0, 0, 0.3),
+  0px 13px 19px rgba(0, 0, 0, 0.2);
 }
 
 a.link {
@@ -738,8 +791,8 @@ span.dialog_text{
   white-space: nowrap;
   text-overflow: ellipsis;
   /*
-  overflow: auto;
-  */
+   overflow: auto;
+   */
 }
 
 .exercise_class {
@@ -758,11 +811,11 @@ span.dialog_text{
 {
   white-space:normal !important;
   /*
-  word-wrap:break-word;
-    white-space:nowrap;
-    overflow:hidden;
-    text-overflow:ellipsis;
-  */
+   word-wrap:break-word;
+   white-space:nowrap;
+   overflow:hidden;
+   text-overflow:ellipsis;
+   */
 }
 
 img.open_task {
@@ -835,11 +888,11 @@ img.open_task {
   font-size: 14px;
 
   -webkit-border-top-left-radius: 10px;
-    -webkit-border-top-right-radius: 10px;
-    -khtml-border-top-left-radius: 10px;
-    -khtml-border-top-right-radius: 10px;
-    -moz-border-radius-topleft: 10px;
-    -moz-border-radius-topright: 10px;
+  -webkit-border-top-right-radius: 10px;
+  -khtml-border-top-left-radius: 10px;
+  -khtml-border-top-right-radius: 10px;
+  -moz-border-radius-topleft: 10px;
+  -moz-border-radius-topright: 10px;
 
 }
 
@@ -862,17 +915,17 @@ img.open_task {
   right:20px;
   top: 5px;
   font-size: 12px !important;
-    font-weight: bold;
+  font-weight: bold;
 }
 
 #footer .language_box select {
-   background: transparent;
-   border: 0;
-   border-radius: 0;
-   -webkit-appearance: none;
-   cursor:pointer;
+  background: transparent;
+  border: 0;
+  border-radius: 0;
+  -webkit-appearance: none;
+  cursor:pointer;
   font-size: 12px !important;
-    font-weight: bold;
+  font-weight: bold;
 }
 
 #footer .user_agent {
@@ -882,7 +935,7 @@ img.open_task {
 
 
 #footer .ui-clock {
-   font-weight: bold;
+  font-weight: bold;
   background: none;
   color:#5A5757;
   border: none;
