Deploy-Fix, Performance-Fix

--- a/src/main/webapp/resources/css/styles.css
+++ b/src/main/webapp/resources/css/styles.css
@@ -222,6 +222,10 @@
   background-color:white;
 }
 
+.ui-fileupload-content {
+  background:lightcyan;
+}
+
 
 /*
  * -------------------------------------------------------------
