--- a/src/main/webapp/templates/common/commonFooter.xhtml
+++ b/src/main/webapp/templates/common/commonFooter.xhtml
@@ -12,9 +12,9 @@
   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at
-  
+
        http://www.apache.org/licenses/LICENSE-2.0
-  
+
   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
@@ -31,13 +31,13 @@ xmlns:p="http://primefaces.org/ui">
   <body>
     <ui:composition>
       <h:dataTable>
-		<!--
+    <!--
         <h:column>
           <f:facet name="header">
             <p:clock pattern="HH:mm:ss" mode="server"/>
           </f:facet>
         </h:column>
-		-->
+    -->
         <h:column>
           <f:facet name="header">
             <h:form>
@@ -53,17 +53,17 @@ xmlns:p="http://primefaces.org/ui">
           <f:facet name="header">
             <h:form>
               <p:remoteCommand name="lazyload" update="sessionTime"
-              action="#{sessionCollector.updateSessionTime()}"></p:remoteCommand>
+              action="#{userSession.updateSessionTime()}"></p:remoteCommand>
               <span id="session_timer">
                 <h:outputText value="SESSION:" />
-                <h:outputText id="sessionTime" value="#{sessionCollector.sessionTime}" />
+                <h:outputText id="sessionTime" value="#{userSession.sessionTime}" />
                 <h:outputText value="s" />
               </span>
             </h:form>
           </f:facet>
         </h:column>
-		<!-- TODO: language-switch -->
-		<!--
+    <!-- TODO: language-switch -->
+    <!--
         <h:column>
           <f:facet name="header">
             <span class="language_box">
@@ -71,8 +71,8 @@ xmlns:p="http://primefaces.org/ui">
             </span>
           </f:facet>
         </h:column>
-		-->
-		<!--
+    -->
+    <!--
         <h:column>
           <f:facet name="header">
             <span class="user_agent">
@@ -80,8 +80,9 @@ xmlns:p="http://primefaces.org/ui">
             </span>
           </f:facet>
         </h:column>
-		-->
+    -->
       </h:dataTable>
     </ui:composition>
   </body>
 </html>
+
