--- a/src/main/webapp/templates/errorpage.xhtml
+++ b/src/main/webapp/templates/errorpage.xhtml
@@ -11,9 +11,9 @@
   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at
-  
+
        http://www.apache.org/licenses/LICENSE-2.0
-  
+
   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
@@ -21,26 +21,32 @@
   limitations under the License.
   #L%
   -->
-<ui:composition template="/templates/common/commonLayout.xhtml"
-    xmlns="http://www.w3.org/1999/xhtml"
-    xmlns:h="http://java.sun.com/jsf/html"
-    xmlns:ui="http://java.sun.com/jsf/facelets"
-    xmlns:fn="http://java.sun.com/jsp/jstl/functions"
-    xmlns:of="http://omnifaces.org/functions"
->
-    <ui:define name="content">
-        <ui:insert name="errorContent">
-            <ul class='stacktrace'>
-                <li>User agent: #{header['user-agent']}</li>
-                <li>User IP: #{empty header['x-forwarded-for'] ? request.remoteAddr : fn:split(header['x-forwarded-for'], ',')[0]}</li>
-                <li>Request URI: <a href="#{requestScope['javax.servlet.error.request_uri']}">#{requestScope['javax.servlet.error.request_uri']}</a></li>
-                <li>Ajax request: #{facesContext.partialViewContext.ajaxRequest ? 'Yes' : 'No'}</li>
-                <li>Status code: #{requestScope['javax.servlet.error.status_code']}</li>
-                <li>Exception type: #{requestScope['javax.servlet.error.exception_type']}</li>
-                <li>Exception message: #{requestScope['javax.servlet.error.message']}</li>
-                <li>Stack trace: <pre><code>#{of:printStackTrace(requestScope['javax.servlet.error.exception'])}</code></pre></li>
-            </ul>
-        </ui:insert>
-        <h:outputScript rendered="#{facesContext.partialViewContext.ajaxRequest}">scrollTo(0, 0);</h:outputScript>
-    </ui:define>
+<ui:composition template="/templates/common/commonLayout.xhtml" xmlns="http://www.w3.org/1999/xhtml"
+xmlns:h="http://java.sun.com/jsf/html" xmlns:ui="http://java.sun.com/jsf/facelets"
+xmlns:fn="http://java.sun.com/jsp/jstl/functions" xmlns:of="http://omnifaces.org/functions">
+ <ui:define name="content">
+  <ui:insert name="errorContent">
+   <ul class='stacktrace'>
+    <li>You can report suspected bugs at
+    <a href='https://github.com/UniversityOfWuerzburg-ChairCompSciVI/ueps/issues'>
+    github.com/UniversityOfWuerzburg-ChairCompSciVI/ueps/issues</a>.</li>
+    <li>User agent: #{header['user-agent']}</li>
+    <li>User IP: #{empty header['x-forwarded-for'] ? request.remoteAddr : fn:split(header['x-forwarded-for'], ',')[0]}</li>
+    <li>Request URI:
+    <a href="#{requestScope['javax.servlet.error.request_uri']}">
+    #{requestScope['javax.servlet.error.request_uri']}</a>
+    </li>
+    <li>Ajax request: #{facesContext.partialViewContext.ajaxRequest ? 'Yes' : 'No'}</li>
+    <li>Status code: #{requestScope['javax.servlet.error.status_code']}</li>
+    <li>Exception type: #{requestScope['javax.servlet.error.exception_type']}</li>
+    <li>Exception message: #{requestScope['javax.servlet.error.message']}</li>
+    <li>Stack trace:
+      <pre>
+        <code>#{of:printStackTrace(requestScope['javax.servlet.error.exception'])}</code>
+      </pre>
+    </li>
+   </ul>
+  </ui:insert>
+  <h:outputScript rendered="#{facesContext.partialViewContext.ajaxRequest}">scrollTo(0, 0);</h:outputScript>
+ </ui:define>
 </ui:composition>
