--- a/src/main/webapp/templates/common/commonLayout.xhtml
+++ b/src/main/webapp/templates/common/commonLayout.xhtml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <!--
   #%L
   ************************************************************************
@@ -12,9 +13,9 @@
   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at
-  
+
        http://www.apache.org/licenses/LICENSE-2.0
-  
+
   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
@@ -25,25 +26,28 @@
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml"
-xmlns:h="http://java.sun.com/jsf/html"
-xmlns:ui="http://java.sun.com/jsf/facelets"
-xmlns:f="http://java.sun.com/jsf/core"
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:h="http://java.sun.com/jsf/html"
+xmlns:ui="http://java.sun.com/jsf/facelets" xmlns:f="http://java.sun.com/jsf/core"
 xmlns:o="http://omnifaces.org/ui" xmlns:p="http://primefaces.org/ui"
 class="mainfont maincolor">
- <f:view locale="#{language.localeCode}">
+ <f:view>
   <h:head>
-   <!-- stylesheets -->
-   <h:outputStylesheet library="css" name="styles.css" />
-   <h:outputStylesheet library="css" name="tipsy.css" />
-   <h:outputScript library="js" name="jquery.waituntilexists.js" />
+    <!-- ************************************************************************ -->
+   <h:outputStylesheet library="css" name="jquery.tipsy.css" />
+   <h:outputStylesheet library="css" name="jquery.mCustomScrollbar.css" />
+   <h:outputStylesheet library="css" name="main.css" />
+   <!-- ************************************************************************ -->
+   <h:outputScript library="js" name="jquery.mCustomScrollbar.js" />
    <h:outputScript library="js" name="jquery.tipsy.js" />
-   <h:outputScript library="js" name="index.js" />
    <h:outputScript library="js" name="jquery.pulsate.min.js" />
+   <h:outputScript library="js" name="jquery.ui.touch-punch.min.js" />
+   <h:outputScript library="js" name="main.js" />
+   <!-- ************************************************************************ -->
    <title>#{txt['BASIC.NAME']}</title>
    <link rel="shortcut icon" href="resources/img/#{config['IMG.FAVICON']}" />
    <link rel="icon" type="image/x-icon"
    href="resources/img/#{config['IMG.FAVICON']}" />
+   <!-- ************************************************************************ -->
   </h:head>
   <h:body>
    <div id="page">
@@ -55,30 +59,30 @@ class="mainfont maincolor">
     <div id="content" class="roundcorners2">
      <noscript>
       <div style="height: 50px; width:830px; text-align:center;
-			  background-color: red; margin-bottom: 20px; padding: 10px">
+        background-color: red; margin-bottom: 20px; padding: 10px">
        <h3>#{txt['ERROR.JAVASCRIPT']}</h3>
       </div>
      </noscript>
 
-	 <!-- Internet Explorer Warning Message -->
-	 <!-- <p:panel id="shitty_internet_explorer" rendered="#{sessionListener.showIEError()}" -->
-	 <!-- style="display:none; height: 44px; width:830px; text-align:center;                 -->
-	 <!-- background-color: red; margin-bottom: 20px; padding: 10px; font-weight: bold">     -->
-	 <!-- #{txt['ERROR.IE']}                                                                 -->
-	 <!-- <p:commandButton value="verstecken" onclick="hideIEMessage()"                      -->
-	 <!-- actionListener="#{sessionListener.disableIEError()}"                               -->
-	 <!-- style="float:right; position: relative; top: 15px; z-index:99" /></p:panel>        -->
+   <!-- Internet Explorer Warning Message -->
+   <p:panel id="shitty_internet_explorer" rendered="#{sessionListener.showIEError()}"
+   style="display:none; height: 44px; width:830px; text-align:center;
+   background-color: red; margin-bottom: 20px; padding: 10px; font-weight: bold">
+   #{txt['ERROR.IE']}
+   <p:commandButton value="verstecken" onclick="hideIEMessage()"
+   actionListener="#{sessionListener.disableIEError()}"
+   style="float:right; position: relative; top: 15px; z-index:99" /></p:panel>
 
 
-	 <!-- <p:panel id="shitty_internet_explorer" rendered="#{sessionListener.showIEError()}"              -->
-	 <!-- style="display:block; height: 55px; width:830px; text-align:center;                             -->
-	 <!-- background-color: red; margin-bottom: 20px; padding: 10px; font-weight: bold;">                 -->
-	 <!-- <span style="color:white !important; font-size:18px !important">                                -->
-	 <!-- Bitte beachten Sie, dass derzeit nur Zwischenergebnisse der bewerteten Übung angezeigt werden. -->
-	 <!-- </span>                                                                                         -->
-	 <!-- <p:commandButton value="verstecken" onclick="hideIEMessage()"                                   -->
-	 <!-- actionListener="#{sessionListener.disableIEError()}"                                            -->
-	 <!-- style="float:right; position: relative; top: 15px; z-index:99" /></p:panel>                     -->
+   <!-- <p:panel id="shitty_internet_explorer" rendered="#{sessionListener.showIEError()}"              -->
+   <!-- style="display:block; height: 55px; width:830px; text-align:center;                             -->
+   <!-- background-color: red; margin-bottom: 20px; padding: 10px; font-weight: bold;">                 -->
+   <!-- <span style="color:white !important; font-size:18px !important">                                -->
+   <!-- Bitte beachten Sie, dass derzeit nur Zwischenergebnisse der bewerteten Übung angezeigt werden. -->
+   <!-- </span>                                                                                         -->
+   <!-- <p:commandButton value="verstecken" onclick="hideIEMessage()"                                   -->
+   <!-- actionListener="#{sessionListener.disableIEError()}"                                            -->
+   <!-- style="float:right; position: relative; top: 15px; z-index:99" /></p:panel>                     -->
 
      <ui:insert name="content">
       <ui:include src="/templates/common/commonContent.xhtml" />
@@ -94,3 +98,4 @@ class="mainfont maincolor">
   </h:body>
  </f:view>
 </html>
+
