--- a/src/main/webapp/templates/common/commonHeader.xhtml
+++ b/src/main/webapp/templates/common/commonHeader.xhtml
@@ -35,10 +35,12 @@ xmlns:p="http://primefaces.org/ui">
    </span>
   </h:link>
   <table class="header_elements">
-   <tr style="height:35px">
+   <tr class="main_links_height">
     <td>
+     <!-- ************************************************************************ -->
      <p class="links">
-      <h:link value="#{txt['HEADER.LINK1']}" outcome="home" rendered="#{scenarioController.isValidScenario()}"
+      <h:link value="#{txt['HEADER.LINK1']}" outcome="home"
+      rendered="#{scenarioController.isValidScenario()}"
       class="lightshadow #{moveTo.getHeaderLinkStyle('index.xhtml')}" />
       <!-- -->
       <h:link value="#{txt['HEADER.LINK2']}" rendered="#{rights.hasUserAddingRights()}" outcome="rights"
@@ -50,10 +52,12 @@ xmlns:p="http://primefaces.org/ui">
       <h:link value="#{txt['HEADER.LINK4']}" rendered="#{rights.hasRatingRight()}" outcome="submission"
       class="lightshadow #{moveTo.getHeaderLinkStyle('submission.xhtml')}" />
      </p>
+     <!-- ************************************************************************ -->
     </td>
    </tr>
    <tr>
     <td>
+     <!-- ************************************************************************ -->
      <p class="userid secondcolor">
       <ui:insert name="header_text">
        <h:outputText value="#{txt['HEADER.DEFAULT']}" />
@@ -62,16 +66,17 @@ xmlns:p="http://primefaces.org/ui">
       value="   (#{txt['SESSION.USER']} '" />
       <h:outputText value="#{userSession.getUserName()}" />
       <h:outputText class="maincolor" value="'" rendered="#{userSession.hasUser()}" />
-      <h:outputText rendered="#{rights.isAdmin()}" value=" - " />
+      <h:outputText rendered="#{rights.isAdmin() || rights.isLecturer()}" value=" - " />
       <h:outputText rendered="#{rights.isAdmin()}" class="admin-text" value="#{txt['RIGHTS.ADMIN']}" />
+      <h:outputText rendered="#{rights.isLecturer()}" class="lecturer-text"
+      value="#{txt['RIGHTS.LECTURER']}" />
       <h:outputText class="maincolor" value=" - " rendered="#{userSession.hasUser()}" />
-      <p:commandLink styleClass="maincolor"
-          rendered="#{userSession.hasUser()}" action="#{moveTo.logout()}">
-       <h:outputText value=" Abmelden" />
+      <p:commandLink styleClass="maincolor" rendered="#{userSession.hasUser()}" action="#{moveTo.logout()}">
+       <h:outputText value=" #{txt['LOGOUT']}" />
       </p:commandLink>
-
       <h:outputText class="maincolor" rendered="#{userSession.hasUser()}" value=")" />
      </p>
+     <!-- ************************************************************************ -->
     </td>
    </tr>
   </table>
