--- a/src/main/webapp/templates/common/commonLayout.xhtml
+++ b/src/main/webapp/templates/common/commonLayout.xhtml
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <!--
   #%L
   ************************************************************************
@@ -23,16 +22,14 @@
   limitations under the License.
   #L%
   -->
-
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:h="http://java.sun.com/jsf/html"
 xmlns:ui="http://java.sun.com/jsf/facelets" xmlns:f="http://java.sun.com/jsf/core"
-xmlns:o="http://omnifaces.org/ui" xmlns:p="http://primefaces.org/ui"
-class="mainfont maincolor">
+xmlns:o="http://omnifaces.org/ui" xmlns:p="http://primefaces.org/ui" class="mainfont maincolor">
  <f:view>
   <h:head>
-    <!-- ************************************************************************ -->
+   <!-- ************************************************************************ -->
    <h:outputStylesheet library="css" name="jquery.tipsy.css" />
    <h:outputStylesheet library="css" name="jquery.mCustomScrollbar.css" />
    <h:outputStylesheet library="css" name="main.css" />
@@ -45,8 +42,7 @@ class="mainfont maincolor">
    <!-- ************************************************************************ -->
    <title>#{txt['BASIC.NAME']}</title>
    <link rel="shortcut icon" href="resources/img/#{config['IMG.FAVICON']}" />
-   <link rel="icon" type="image/x-icon"
-   href="resources/img/#{config['IMG.FAVICON']}" />
+   <link rel="icon" type="image/x-icon" href="resources/img/#{config['IMG.FAVICON']}" />
    <!-- ************************************************************************ -->
   </h:head>
   <h:body>
@@ -63,27 +59,21 @@ class="mainfont maincolor">
        <h3>#{txt['ERROR.JAVASCRIPT']}</h3>
       </div>
      </noscript>
-
-   <!-- Internet Explorer Warning Message -->
-   <p:panel id="shitty_internet_explorer" rendered="#{sessionListener.showIEError()}"
-   style="display:none; height: 44px; width:830px; text-align:center;
-   background-color: red; margin-bottom: 20px; padding: 10px; font-weight: bold">
-   #{txt['ERROR.IE']}
-   <p:commandButton value="verstecken" onclick="hideIEMessage()"
-   actionListener="#{sessionListener.disableIEError()}"
-   style="float:right; position: relative; top: 15px; z-index:99" /></p:panel>
-
-
-   <!-- <p:panel id="shitty_internet_explorer" rendered="#{sessionListener.showIEError()}"              -->
-   <!-- style="display:block; height: 55px; width:830px; text-align:center;                             -->
-   <!-- background-color: red; margin-bottom: 20px; padding: 10px; font-weight: bold;">                 -->
-   <!-- <span style="color:white !important; font-size:18px !important">                                -->
-   <!-- Bitte beachten Sie, dass derzeit nur Zwischenergebnisse der bewerteten Übung angezeigt werden. -->
-   <!-- </span>                                                                                         -->
-   <!-- <p:commandButton value="verstecken" onclick="hideIEMessage()"                                   -->
-   <!-- actionListener="#{sessionListener.disableIEError()}"                                            -->
-   <!-- style="float:right; position: relative; top: 15px; z-index:99" /></p:panel>                     -->
-
+     <!-- ************************************************************************ -->
+     <!-- Internet Explorer Warning Message -->
+     <p:panel id="shitty_internet_explorer" rendered="#{sessionListener.showIEError()}">#{txt['ERROR.IE']} 
+     <p:commandButton value="#{txt['HIDE']}" onclick="hideIEMessage()"
+     actionListener="#{sessionListener.disableIEError()}" styleClass="hide_panel_button" /></p:panel>
+     <!-- ************************************************************************ -->
+     <!-- Info panel that can be used for maintenance messages  -->
+     <!-- to activate the panel, just toggle 'false' to 'true'  -->
+     <!-- at '#{sessionListener.showInfoScreen(false)}'         -->
+     <p:panel id="info_screen" rendered="#{sessionListener.showInfoScreen(false)}">
+       Info: Wartung am Dienstag den 01.04.2013 zwischen 14:00 und 15:00 Uhr
+       <p:commandButton value="#{txt['HIDE']}" oncomplete="hideInfoMessage()"
+       actionListener="#{sessionListener.disableInfoScreen()}" styleClass="hide_panel_button" />
+     </p:panel>
+     <!-- ************************************************************************ -->
      <ui:insert name="content">
       <ui:include src="/templates/common/commonContent.xhtml" />
      </ui:insert>
@@ -98,4 +88,3 @@ class="mainfont maincolor">
   </h:body>
  </f:view>
 </html>
-
